[package]
name = "monty_carlos_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
monty_carlos = { path = "/home/necrosovereign/scr/rust/monty_carlos", version = "0.1.1"}
statrs = "0.16.0"
