[package]
name = "monty_carlos_cli"
authors = ["Vladimir Kharchev <necrosovereign@gmail.com>"]
description = "A CLI interface for the monty_carlos library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
monty_carlos = { git = "https://github.com/necrosovereign/monty_carlos.git", version = "0.1.1"}
statrs = "0.16.0"
